- Grup-Classe: Second HTML box independent of first box (GitHub #228)
- Social Media: Fixed automatic links (GitHub #108)
- Enllaços educatius: Updated URL of edu3 (GitHub #225)
- Changed login form layout (GitHub #79)
- WSL: Hidden some tabs for all users but xtecadmin (GitHub #200)
- WSL: Added access control using black and white lists (GitHub #62)


Changes 15.08.10
---------------------------------------------------------------------------------------
- Added new function to manage superadmin and xtecadmin
- Updated Mailer WSDL's


Changes 15.07.20
---------------------------------------------------------------------------------------
- Upgraded WordPress to version 4.2.2 (Trello #793)
- Added submodule of Multisite common functions
- Added message to warn user about quota exceeded in BuddyPress Activity+
- Improved some styles (GCE, buttons, table and image margin with text and code styling) (GitHub #208)
- GCE: Changed default cache duration to 300 seconds (Trello #875)
- GCE: Fixed visualitzation of calendar in list mode (GitHub #219)
- Convert Socialmedia to a plugin (GitHub #64 - Partial fix)
- Convert Enllaços educatius to a plugin (GitHub #213)
- Removed link to Social Articles in BuddyPress admin page
- Updated mailer library
- Added some information to replace URL script, for PORTAL
- Fixed catalan spelling in Appearance | Customize | Colors (GitHub #206)
- XTEC Stats: Added first version which includes just a widget to count visits (Trello #821)
- BP-Docs: Hidden "Associated elements" in document edition (Trello #883)
- Reactor-primaria-1: Deleted unused files for theme colours (GitHub #214)
- Updated mailer library
- Added two colour palettes to theme (GitHub #216)
- Improved visualitzation of Visibility block in Appearance | Customize (GitHub #204)
- Intraweb Importer: Added plugin import data from Intraweb (Trello #732)
- Fixed removal of statistics older than one year (Trello #820)